src/tests/snapshots/gitu__tests__show_refs__show_refs_at_local_branch.snap
---
source: src/tests/mod.rs
assertion_line: 345
expression: ctx.redact_buffer()
---
▌Branches                                                                       |
▌* main add initial-file                                                 b66a0bf|
                                                                                |
 Remote origin                                                                  |
   origin/HEAD add initial-file                                          b66a0bf|
   origin/main add initial-file                                          b66a0bf|
                                                                                |
 Tags                                                                           |
   main add initial-file                                                 b66a0bf|
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: f418b1aa25876af5
