src/tests/snapshots/gitu__tests__show_refs__show_refs_at_tag.snap
---
source: src/tests/mod.rs
assertion_line: 358
expression: ctx.redact_buffer()
---
▌Branches                                                                       |
▌? main merged add initial-file                                          b66a0bf|
                                                                                |
 Remote origin                                                                  |
   origin/HEAD merged add initial-file                                   b66a0bf|
 ? origin/main merged add initial-file                                   b66a0bf|
                                                                                |
 Tags                                                                           |
 ? v1.0 add initial-file                                                 b66a0bf|
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: b478b884cf79fd60
