src/tests/snapshots/gitu__tests__show_refs__show_refs_collapse_all_sections.snap
---
source: src/tests/mod.rs
assertion_line: 378
expression: ctx.redact_buffer()
---
▌Branches…                                                                      |
                                                                                |
 Remote origin…                                                                 |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 3f69186c82279c13
