src/tests/snapshots/gitu__tests__show_refs__show_refs_delete_selected_branch.snap
---
source: src/tests/mod.rs
assertion_line: 365
expression: ctx.redact_buffer()
---
 Branches                                                                       |
▌* main merged add initial-file                                          b66a0bf|
                                                                                |
 Remote origin                                                                  |
   origin/HEAD merged add initial-file                                   b66a0bf|
   origin/main merged add initial-file                                   b66a0bf|
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git branch -d feature-a                                                       |
Deleted branch feature-a (was b66a0bf).                                         |
styles_hash: 4706312347e796d3
