src/tests/snapshots/gitu__tests__show_refs__show_refs_mark_branch_for_delete.snap
---
source: src/tests/mod.rs
assertion_line: 397
expression: ctx.redact_buffer()
---
 Branches                                                                       |
D  feature-a merged add initial-file                                     b66a0bf|
▌* main merged add initial-file                                          b66a0bf|
                                                                                |
 Remote origin                                                                  |
   origin/HEAD merged add initial-file                                   b66a0bf|
   origin/main merged add initial-file                                   b66a0bf|
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 4051a7fe92849d6f
