src/tests/snapshots/gitu__tests__show_refs__show_refs_merged_status.snap
---
source: src/tests/mod.rs
assertion_line: 382
expression: ctx.redact_buffer()
---
▌Branches                                                                       |
▌* main merged add initial-file                                          b66a0bf|
▌  merged merged add initial-file                                        b66a0bf|
▌  unmerged unmerged add unmerged commit                                 1524324|
                                                                                |
 Remote origin                                                                  |
   origin/HEAD merged add initial-file                                   b66a0bf|
   origin/main merged add initial-file                                   b66a0bf|
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 14ddad5041b5f5e4
